change home 1 text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <nav>
                         
                         <ul class="menu">
-                            <li><a href="">Home</a></li>
+                            <li><a href="">Home 1</a></li>
                             <li class="menu-2"><a href="">Products<i class="fa fa-angle-down " ></i></a>
                                 <ul class="sub-menu">
                                       <li><a href="#">Lorem ipsum dolor</a></li>
