--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         
                         <ul class="menu">
                             <li><a href="">Home 1</a></li>
-                            <li class="menu-2"><a href="">Products<i class="fa fa-angle-down " ></i></a>
+                            <li class="menu-2"><a href="">Products 2<i class="fa fa-angle-down " ></i></a>
                                 <ul class="sub-menu">
                                       <li><a href="#">Lorem ipsum dolor</a></li>
                                       <li><a href="#">Sit amet</a></li>
