--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <nav>
                         
                         <ul class="menu">
-                            <li><a href="">Home 1</a></li>
-                            <li class="menu-2"><a href="">Products 2<i class="fa fa-angle-down " ></i></a>
+                            <li><a href="">Home </a></li>
+                            <li class="menu-2"><a href="">Products <i class="fa fa-angle-down " ></i></a>
                                 <ul class="sub-menu">
                                       <li><a href="#">Lorem ipsum dolor</a></li>
                                       <li><a href="#">Sit amet</a></li>
@@ -41,7 +41,7 @@
                                  </ul>
                                 
                             </li>
-                            <li><a href="">Payment 3</a></li>
+                            <li><a href="">Payment </a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
