зробили верхню панель

--- a/index.html
+++ b/index.html
@@ -47,22 +47,31 @@
                     </nav>
                 </div>
                 <div class="col-md-3">
-                    <div class="wrap">
-                        <div class="search">
-                          <input type="text" class="searchTerm" placeholder="Search">
-                          <button type="submit" class="searchButton">
-                          <i class="fa fa-search"></i>
-                          </button>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <form action=""class="header-form-seach">
+                                <input type="text" class="input-text">
+                                <button class="button-search"><i class="fa fa-search " ></i></button>
+                            </form>
                         </div>
-                      </div>
-                    <a href="" class="menu-btn"
-            ><button type="submit" class="corz"><img  src="images/corz.png" alt=""></button> </a>
-                </div>
+                        <div class="col-md-3">
+                            <div class="header-cart">
+                                <button class="button-cart"><i class="fa-solid fa-cart-shopping"></i></button>
+                                <div class="product-count"><p>4</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>      
             </div>
         </div>
     </header>
     <main class="main">
-        <div class="conteiner">Main</div></main>
+        <div class="conteiner">
+            <div class="row">
+                <div class="col-md-3">device type</div>
+                <div class="col-md-9">laptops and tablets</div>
+            </div>
+        </div></main>
     <footer class="footer"> <div class="conteiner">Footer</div></footer>
 </body>
 </html>
