--- a/index.html
+++ b/index.html
@@ -68,9 +68,42 @@
     <main class="main">
         <div class="conteiner">
             <div class="row">
-                <div class="col-md-3">device type</div>
-                <div class="col-md-9">laptops and tablets</div>
+                <div class="col-md-3">
+                    <ul class="device-menu">
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                        <li>6</li>
+                    </ul>
+                </div>
+                <div class="col-md-9">
+                    <article class="cart-device-menu">
+                        <h1>Laptops and Tablets</h1>
+                    </article>
+                    <article class="cart-device">
+                        <article class="images">
+                            <img class="monit" src="images/monit.png" alt="">
+
+                           <button class="button-frames"><img class="frames" src="images/frames1.png" alt=""></button>
+                           <button class="button-heart"> <img class="heart" src="images/heart1.png" alt=""></button>
+                        </article>
+                        <article class="device-name">
+                            <h3>#1 Device Name</h3>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
+                            <h4>TYPE:laptop</h4>
+                            <h4>SCREEN SIZE: 7 inches</h4>
+                            <h4>RAM:1 GB</h4>
+                            <h2>$599</h2>
+                            <button class="more-details"></button>
+                            <button class="add-cart"></button>
+                        
+                        </article>
+                    </article>
+                </div>
             </div>
+            
         </div></main>
     <footer class="footer"> <div class="conteiner">Footer</div></footer>
 </body>
