--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
     </header>
     <main class="main">
         <div class="conteiner">
-            <div class="col-md-3">filter</div>
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="filter">
+                            <div class="menu-filter-1">
+                                <h3>DEVISE TYPE</h3>
+                                <input type="checkbox" id="laptop">
+                                <label for="leptop">leptop</label>
+                                <input type="checkbox" id="Tablet">
+                                <label for="Tablet">Tablet</label>
+                            </div>
+                            <div class="menu-filter-2"></div>
+                            <div class="menu-filter-3"></div>
+                        </div>
+                    </div></div>
+            </div>
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-md-12">
