add menu filter 2

--- a/index.html
+++ b/index.html
@@ -71,15 +71,28 @@
             <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="filter">
+                        <div class="filter" >
                             <div class="menu-filter-1">
                                 <h3>DEVISE TYPE</h3>
                                 <input type="checkbox" id="laptop">
-                                <label for="leptop">leptop</label>
-                                <input type="checkbox" id="Tablet">
-                                <label for="Tablet">Tablet</label>
+                                <label for="laptop">Leptop</label>
+                                <p><input type="checkbox" id="Tablet">
+                                <label for="Tablet">Tablet</label></p>
                             </div>
-                            <div class="menu-filter-2"></div>
+                            <div class="menu-filter-2">
+                                <h3>COLOR</h3>
+                                <input type="checkbox" id="Black">
+                                <label for="Black">Black</label>
+                                <p><input type="checkbox" id="Red">
+                                <label for="Red">Red</label></p>
+                                <input type="checkbox" id="Green">
+                                <label for="Green">Green</label>
+                                <p><input type="checkbox" id="Blue">
+                                <label for="Blue">Blue</label></p>
+                                <input type="checkbox" id="Orange">
+                                <label for="Orange">Orange</label>
+                                
+                            </div>
                             <div class="menu-filter-3"></div>
                         </div>
                     </div></div>
