--- a/index.html
+++ b/index.html
@@ -93,7 +93,22 @@
                                 <label for="Orange">Orange</label>
                                 
                             </div>
-                            <div class="menu-filter-3"></div>
+                            <div class="menu-filter-3">
+                                <h3>RAM</h3>
+                                <input type="checkbox" id="1GB">
+                                <label for="1GB">1GB</label>
+                                <p><input type="checkbox" id="2GB">
+                                <label for="2GB">2GB</label></p>
+                                <input type="checkbox" id="3GB">
+                                <label for="3GB">3GB</label>
+                                <p><input type="checkbox" id="4GB">
+                                <label for="4GB">4GB</label></p>
+                                <input type="checkbox" id="5GB">
+                                <label for="5GB">5GB</label>
+                                <p class="show">Show more options...</p>
+                                <button class="btn btn-submit">SUBMIT</button>
+
+                            </div>
                         </div>
                     </div></div>
             </div>
@@ -320,6 +335,7 @@
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
                         </div>
+                        <p class="load">Load more...</p>
 
                     </div>
                     </div>
@@ -425,6 +441,10 @@
             </div>
         </div>
     </main>
-    <footer class="footer"> <div class="conteiner">Footer</div></footer>
+    <footer class="footer">
+        <div class="conteiner">
+            <div class="row">
+                <div class="col-md-12">
+            <i class="fa-solid fa-copyright"></i> Copiright 2022</div></div></div></footer>
 </body>
 </html>
