--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </header>
     <main class="main">
-        <div class="conteiner">
+        <div class="container">
             <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-12">
@@ -442,7 +442,7 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="conteiner">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
             <i class="fa-solid fa-copyright"></i> Copiright 2022</div></div></div></footer>
