--- a/index.html
+++ b/index.html
@@ -446,5 +446,6 @@
             <div class="row">
                 <div class="col-md-12">
             <i class="fa-solid fa-copyright"></i> Copiright 2022</div></div></div></footer>
+            <script src="app.js"></script>
 </body>
 </html>
