--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div class="header-cart">
                                 <button class="button-cart"><img src="images/corz.png" alt="" class="button-corz">
                                     <img src="images/corz2.png" alt="" class="button-corz-2"></button>
-                                <div class="product-count"><p>4</p></div>
+                                <div class="product-count" id="products-count"><p>0</p></div>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="product-price">$500<sup>25</sup> </div>
                             <button class="btn btn-more-details">MORE DETAILS</button>
-                            <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
+                            <button class="btn btn-add-to-cart" >ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                                <img src="images/corz.png" alt="" class="btn-corz-2"></button>
                             </div>
 
