--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                                   <img src="images/frames2.png"  class="zoom-img-2" >
                              </div> 
                             <div class="like">
-                                <img src="images/heart1.png" alt="" class="like-img">
-                                <img src="images/heart2.png" alt="" class="like-img-2">
+                                <button><img src="images/heart1.png" alt="" class="like-img "></button>
+                                <button><img src="images/heart2.png" alt="" class="like-img-2"></button>
                             </div>
                             </div>
                             <div class="product-body">
