--- a/index.html
+++ b/index.html
@@ -446,6 +446,27 @@
             <div class="row">
                 <div class="col-md-12">
             <i class="fa-solid fa-copyright"></i> Copiright 2022</div></div></div></footer>
+
+            <div class="modal">
+                <div class="modal-block">
+                    <form action="">
+                        <div class="btn-close">X</div>
+                        <h3 class="form-title">Please call for more details</h3>
+                        <div class="form-field">
+                            <input type="text" placeholder="Your name">
+                        </div>
+                        <div class="form-field">
+                            <input type="text" placeholder="Your phone">
+                        </div>
+                        <div class="form-button">
+                            <button >Please call</button>
+                        </div>
+                        
+                    </form>
+                </div>
+            </div>
+
+
             <script src="app.js"></script>
 </body>
 </html>
