function scroll modal

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="row">
                     <div class="col-md-8">
                         <h1>Laptops and Tablets</h1>
@@ -431,7 +432,7 @@
                 <div class="col-md-12">
             <i class="fa-solid fa-copyright"></i> Copiright 2022</div></div></div></footer>
 
-            <div class="modal">
+            <div class="modal" id="showScroll">
                 <div class="modal-block">
                     <form action="">
                         <div class="btn-close">X</div>
