--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <script
       src="https://kit.fontawesome.com/5d15d8ab57.js"
@@ -165,7 +167,7 @@
                 </div>
                 <div class="row">
                     <!-- ----------------------------------перша колонка--------------------------------------- -->
-                    <div class="col-md-4">
+                    <div class="col-md-4" >
                         <div class="product">
                             <div class="product-image"> 
                                 <img src="images/monit.png" alt="" class="device-img">   
@@ -453,7 +455,7 @@
             <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
             <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
             <script type="text/javascript" src="slick/slick.min.js"></script>
-
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
             <script src="app.js"></script>
 </body>
 </html>
