--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
                                     <span>RAM</span>:1GB
                                 </div>
                                 <div class="product-price">$500<sup>25</sup> </div>
+                                <div class="product-quantity">
+                                    <button>-</button>
+                                    <input type="text" value="1" readonly>
+                                    <button>+</button>
+                                </div>
                             <button class="btn btn-more-details">MORE DETAILS</button>
                             <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                                <img src="images/corz.png" alt="" class="btn-corz-2"></button>
