add js  minus-plus button

--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
                                     <span>RAM</span>:1GB
                                 </div>
                                 <div class="product-price">$500<sup>25</sup> </div>
+                                <div class="counter" data-counter>
+                                    <button class="counter_button counter_button_minus">-</button>
+                                    <input class="counter_input" type="text" value="1" readonly>
+                                    <button class="counter_button counter_button_plus">+</button>
+                                </div>
                             <button class="btn btn-more-details">MORE DETAILS</button>
                             <button class="btn btn-add-to-cart" >ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                                <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -217,10 +222,10 @@
                                     <span>RAM</span>:1GB
                                 </div>
                                 <div class="product-price">$500<sup>25</sup> </div>
-                                <div class="product-quantity">
-                                    <button>-</button>
-                                    <input type="text" value="1" readonly>
-                                    <button>+</button>
+                                <div class="counter" data-counter>
+                                    <button class="counter_button counter_button_minus">-</button>
+                                    <input class="counter_input" type="text" value="1" readonly>
+                                    <button class="counter_button counter_button_plus">+</button>
                                 </div>
                             <button class="btn btn-more-details">MORE DETAILS</button>
                             <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
@@ -249,6 +254,11 @@
                                     <span>RAM</span>:1GB
                                 </div>
                                 <div class="product-price">$500<sup>25</sup> </div>
+                                <div class="counter" data-counter>
+                                    <button class="counter_button counter_button_minus">-</button>
+                                    <input class="counter_input" type="text" value="1" readonly>
+                                    <button class="counter_button counter_button_plus">+</button>
+                                </div>
                             <button class="btn btn-more-details">MORE DETAILS</button>
                             <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                                <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -281,6 +291,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$1250<sup>99</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -308,6 +323,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$1250<sup>99</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -335,6 +355,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$1250<sup>99</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -366,6 +391,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$399<sup>50</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -393,6 +423,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$399<sup>50</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
@@ -421,6 +456,11 @@
                                 <span>RAM</span>:1GB
                             </div>
                             <div class="product-price">$399<sup>50</sup> </div>
+                            <div class="counter" data-counter>
+                                <button class="counter_button counter_button_minus">-</button>
+                                <input class="counter_input" type="text" value="1" readonly>
+                                <button class="counter_button counter_button_plus">+</button>
+                            </div>
                         <button class="btn btn-more-details">MORE DETAILS</button>
                         <button class="btn btn-add-to-cart">ADD TO CART<img src="images/corz2.png" alt="" class="btn-corz">
                            <img src="images/corz.png" alt="" class="btn-corz-2"></button>
